--- a/package.json
+++ b/package.json
@@ -1,12 +1,53 @@
 {
+  "name": "es6_playaround",
+  "description": "Setup new project using ES6 features. Babel + jspm/npm + node + gulp + grunt + karma + mocha(test)",
+  "version": "0.0.1",
+  "scripts": {
+    "test": "mocha",
+    "jspm": "jspm",
+    "build": "jspm bundle src/js/app.js src/js/app.bundle.js --inject --minify",
+    "start": "gulp webserver",
+    "live-server": "live-server --port:3004"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-runtime": "^6.6.1",
+    "gulp": "^3.9.1",
+    "gulp-webserver": "^0.9.1",
+    "jspm": "^0.16.32",
+    "live-server": "^0.9.2"
+  },
   "jspm": {
+    "directories": {
+      "packages": "src/jspm_packages"
+    },
+    "configFile": "src/js/jspm.config.js",
+    "dependencies": {
+      "alt": "npm:alt@^0.18.4",
+      "lodash": "npm:lodash@^4.8.2",
+      "react": "npm:react@^0.14.8",
+      "react-dom": "npm:react-dom@^0.14.8",
+      "react-router": "npm:react-router@^2.0.1"
+    },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
       "babel-runtime": "npm:babel-runtime@^5.8.24",
       "core-js": "npm:core-js@^1.1.4"
     }
   },
-  "devDependencies": {
-    "jspm": "^0.16.32"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lxynox/ES6-project.git"
+  },
+  "keywords": [
+    "es6"
+  ],
+  "author": "lxynox",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lxynox/ES6-project/issues"
+  },
+  "homepage": "https://github.com/lxynox/ES6-project#readme"
 }
