--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-runtime": "^6.6.1",
+    "eslint": "^2.7.0",
     "gulp": "^3.9.1",
     "gulp-webserver": "^0.9.1",
     "jspm": "^0.16.32",
@@ -26,6 +27,8 @@
     "configFile": "src/js/jspm.config.js",
     "dependencies": {
       "alt": "npm:alt@^0.18.4",
+      "bootstrap": "github:twbs/bootstrap@^3.3.6",
+      "jquery": "npm:jquery@^2.2.3",
       "lodash": "npm:lodash@^4.8.2",
       "react": "npm:react@^0.14.8",
       "react-dom": "npm:react-dom@^0.14.8",
